25-02-13 AI Tick 간격 수정중

--- a/Game/Saved/Config/ConsoleHistory.ini
+++ b/Game/Saved/Config/ConsoleHistory.ini
@@ -1,4 +1,10 @@
 [ConsoleHistory]
 History=show AIPerception
 History=ai.debug draw
+History=ShowDebug AI
+History=Log AI
+History=LogAI
+History=LogAIPerception
+History="Log LogAIPerception Verbose\r\n"
+History=Log LogAIPerception
 
