--- a/Game/Saved/Config/WindowsEditor/Input.ini
+++ b/Game/Saved/Config/WindowsEditor/Input.ini
@@ -3,4 +3,6 @@
 HistoryBuffer=AIPercepsion
 HistoryBuffer=show AIPerception
 HistoryBuffer=AI.debug
+HistoryBuffer=Show Debug AI
+HistoryBuffer=ShowDebug AI
 
