--- a/Game/Saved/Config/ConsoleHistory.ini
+++ b/Game/Saved/Config/ConsoleHistory.ini
@@ -6,5 +6,6 @@ History=Log AI
 History=LogAI
 History=LogAIPerception
 History="Log LogAIPerception Verbose\r\n"
-History=Log LogAIPerception
+History=log logAIPerception
+History=AIperception
 
